demo/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: seckill
  labels:
    name: seckill
    environment: production
