demo/k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seckill-app-service
  namespace: seckill
  labels:
    app: seckill-app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: seckill-app
  sessionAffinity: None
